feat: test endpoint
